Initialize contest parameter values in data models

--- a/contest/Intro.html
+++ b/contest/Intro.html
@@ -3,7 +3,8 @@
 {{ endblock }}
 {{ block content }}
 
-    {{ formfields }}
+Your endowment will be {{ player.endowment }} in every round.
+
     {{ next_button }}
 
 {{ endblock }}
