--- a/contest/Decision.html
+++ b/contest/Decision.html
@@ -1,7 +1,11 @@
 {{ block title }}
-    Page title
+    Decision for round {{ player.round_number }}
 {{ endblock }}
 {{ block content }}
+
+Your endowment is {{ player.endowment }}.
+Your cost per ticket is {{ group.cost_per_ticket }}.
+Your value of the prize is {{ }}.
 
     {{ formfields }}
     {{ next_button }}
